LAYOUT RESPONSIVO E ALTERACAO NO INDEX ADD...

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8" >
-    <title>Dominio Manutencao</title>
+    <title>Dominio da Manutencao</title>
     
 </head>
 
