--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 <body>
 
-<p align="center"><font size="5"><b>Atenção</b></font></p>
+<p align="center"><font size="5"><b>Atenção Pessoal</b></font></p>
 
 <p align="center">Estamos em manutenção para atualizações internas<br> Por favor, aguarde.<br>
 
